k8s/client-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-client
  namespace: demo-app
  labels:
    app: user-api-client
    service: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-api-client
  template:
    metadata:
      labels:
        app: user-api-client
        service: client
    spec:
      containers:
      - name: client
        image: user-api-client:latest
        imagePullPolicy: IfNotPresent
